--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ button{
     border-radius: 5px;
     background-color: #fff;
     border: 2px solid green;
+    color: black;
 }
 
 /* media Query */
